added long text display screen for legal documents

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width'>
-    <title>Terms &amp; Conditions</title>
-    <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-</head>
-<body>
-<strong>Terms &amp; Conditions</strong> <p>
+<b>Terms &amp; Conditions</b> <p>
     By downloading or using the app, these terms will
     automatically apply to you – you should make sure therefore
     that you read them carefully before using the app. You’re not
@@ -90,7 +81,7 @@
     rights and licenses granted to you in these terms will end;
     (b) you must stop using the app, and (if needed) delete it
     from your device.
-</p> <p><strong>Changes to This Terms and Conditions</strong></p> <p>
+</p> <p><b>Changes to This Terms and Conditions</b></p> <p>
     I may update our Terms and Conditions
     from time to time. Thus, you are advised to review this page
     periodically for any changes. I will
@@ -98,10 +89,8 @@
     Conditions on this page.
 </p> <p>
     These terms and conditions are effective as of 2024-02-03
-</p> <p><strong>Contact Us</strong></p> <p>
+</p> <p><b>Contact Us</b></p> <p>
     If you have any questions or suggestions about my
     Terms and Conditions, do not hesitate to contact me
     at https://github.com/Leonidius20/BeatInspector/discussions.
 </p>
-</body>
-</html>
